# aiMusicGenerator

./: .env.example  .gitignore  Makefile  README.md  design-qa.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/auralis_api/: __init__.py  audio.py  config.py  jobs.py  main.py  policy.py  repository.py  schemas.py
apps/api/src/auralis_api/engines/: __init__.py  ace_step.py  base.py  demo.py
apps/api/tests/: conftest.py  test_api.py
apps/web/: .npmrc  Dockerfile  eslint.config.mjs  next.config.ts  package.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/create/: page.tsx
apps/web/app/legal/: page.tsx
apps/web/app/remix/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/tracks/[id]/: page.tsx
apps/web/components/: app-shell.tsx  brand.test.tsx  brand.tsx  library.tsx  mini-player.tsx  providers.tsx  remix-studio.tsx  settings.tsx  studio.tsx  toast.tsx  track-detail.tsx  waveform.tsx
apps/web/lib/: api.ts  store.ts
docs/: API.md  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  THIRD_PARTY.md
