[project]
name = "auralis-api"
version = "0.1.0"
description = "Auralis control-plane API"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.8.0",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.34.0"
]

[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auralis_api"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
